# graphyard

./: .gitignore  Procfile  README.md  justfile  pyproject.toml
deploy/grafana/dashboards/: graphyard-home.json
deploy/grafana/dashboards/device-network/: graphyard-device-network.json  graphyard-fritz-box-7590-ax.json  graphyard-usw-pro-xg-8-poe.json
deploy/grafana/dashboards/device-thermals/: graphyard-device-thermals.json
deploy/grafana/dashboards/host-infrastructure/: graphyard-fractal-infrastructure.json  graphyard-fractal-thermals.json  graphyard-host-infrastructure.json  graphyard-macmini-infrastructure.json  (+5 more)
deploy/systemd/: graphyard-agent.service  graphyard-web.service  graphyard.env.example
docs/: influx_grafana.md  metric_dimension_model.md
src/django/: .env.example  manage.py
src/django/config/: asgi.py  urls.py  wsgi.py  wsgi_proxy.py
src/graphyard/: admin.py  apps.py  auth.py  influx.py  models.py  services.py  urls.py  views.py
src/graphyard/migrations/: 0001_initial.py  0002_metriccollectionspec.py  0003_alter_metriccollectionspec_spec_type.py  0004_alter_metriccollectionspec_spec_type.py  0005_conditiondefinition_subject_id_filter_and_more.py  0006_alter_metriccollectionspec_spec_type.py  0007_alter_metriccollectionspec_spec_type.py
tests/: test_admin_forms.py  test_agent_command.py  test_api.py  test_apply_metric_collection_specs_command.py  test_condition_evaluation.py  test_grafana_dashboards.py  test_influx_modes.py  test_metric_collection_specs.py  test_metric_dimensions.py  test_seed_disk_usage_condition_command.py  test_ui_auth.py
(+19 files in other folders)
